--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 <section class="section">
   <div class="container is-max-widescreen">
     <div class="columns is-centered has-text-centered">
-      <div class="column is-full-width">
+      <div class="column is-full-width" style="min-width: 0;">
         <h2 class="title is-3">Qualitative Results</h2>
         
         <div class="content has-text-centered">
