--- a/index.html
+++ b/index.html
@@ -275,6 +275,9 @@
             <figure class="image is-inline-block">
               <img src="static/images/Framework.png" alt="Framework">
             </figure>
+            <p class="has-text-grey">
+              Our evaluation framework.
+            </p>
           </div>
         </div>
 
@@ -360,8 +363,8 @@
               </thead>
               <tbody>
                 <tr>
-                  <td style="vertical-align: middle;">Gemini Live</td>
-                  <td style="vertical-align: middle;">Fast</td>
+                  <td style="vertical-align: middle; min-width: 100px;">Gemini Live</td>
+                  <td style="vertical-align: middle; min-width: 100px;">Fast</td>
                   <td style="vertical-align: middle; min-width: 300px;">
                     <audio controls style="width: 100%;">
                       <source src="static/audios/gemini-live-fast/topic4_par1_gemini-live_turn1.wav" type="audio/wav">
@@ -389,8 +392,8 @@
                   </td>
                 </tr>
                 <tr>
-                  <td style="vertical-align: middle;">Gemini Live</td>
-                  <td style="vertical-align: middle;">Indian English</td>
+                  <td style="vertical-align: middle; min-width: 100px;">Gemini Live</td>
+                  <td style="vertical-align: middle; min-width: 100px;">Indian English</td>
                   <td style="vertical-align: middle; min-width: 300px;">
                     <audio controls style="width: 100%;">
                       <source src="static/audios/gemini-live-indian/topic3_par1_gemini-live_turn1.wav" type="audio/wav">
@@ -418,8 +421,8 @@
                   </td>
                 </tr>
                 <tr>
-                  <td style="vertical-align: middle;">Gemini Live</td>
-                  <td style="vertical-align: middle;">Slow</td>
+                  <td style="vertical-align: middle; min-width: 100px;">Gemini Live</td>
+                  <td style="vertical-align: middle; min-width: 100px;">Slow</td>
                   <td style="vertical-align: middle; min-width: 300px;">
                     <audio controls style="width: 100%;">
                       <source src="static/audios/gemini-live-slow/topic0_par1_gemini-live_turn1.wav" type="audio/wav">
@@ -447,8 +450,8 @@
                   </td>
                 </tr>
                 <tr>
-                  <td style="vertical-align: middle;">GPT-4o</td>
-                  <td style="vertical-align: middle;">Indian English</td>
+                  <td style="vertical-align: middle; min-width: 100px;">GPT-4o</td>
+                  <td style="vertical-align: middle; min-width: 100px;">Indian English</td>
                   <td style="vertical-align: middle; min-width: 300px;">
                     <audio controls style="width: 100%;">
                       <source src="static/audios/gpt-4o-indian/topic1_par1_gpt_A_turn1.wav" type="audio/wav">
@@ -476,8 +479,8 @@
                   </td>
                 </tr>
                 <tr>
-                  <td style="vertical-align: middle;">GPT-4o</td>
-                  <td style="vertical-align: middle;">Slow</td>
+                  <td style="vertical-align: middle; min-width: 100px;">GPT-4o</td>
+                  <td style="vertical-align: middle; min-width: 100px;">Slow</td>
                   <td style="vertical-align: middle; min-width: 300px;">
                     <audio controls style="width: 100%;">
                       <source src="static/audios/gpt-4o-slow/topic6_par1_gpt_A_turn1.wav" type="audio/wav">
@@ -505,8 +508,8 @@
                   </td>
                 </tr>
                 <tr>
-                  <td style="vertical-align: middle;">GPT-4o mini</td>
-                  <td style="vertical-align: middle;">Anger</td>
+                  <td style="vertical-align: middle; min-width: 100px;">GPT-4o mini</td>
+                  <td style="vertical-align: middle; min-width: 100px;">Anger</td>
                   <td style="vertical-align: middle; min-width: 300px;">
                     <audio controls style="width: 100%;">
                       <source src="static/audios/gpt-4o-mini-anger/topic16_par1_gpt_A_turn1.wav" type="audio/wav">
@@ -534,8 +537,8 @@
                   </td>
                 </tr>
                 <tr>
-                  <td style="vertical-align: middle;">GPT-4o mini</td>
-                  <td style="vertical-align: middle;">Indian English</td>
+                  <td style="vertical-align: middle; min-width: 100px;">GPT-4o mini</td>
+                  <td style="vertical-align: middle; min-width: 100px;">Indian English</td>
                   <td style="vertical-align: middle; min-width: 300px;">
                     <audio controls style="width: 100%;">
                       <source src="static/audios/gpt-4o-mini-indian/topic1_par1_gpt_A_turn1.wav" type="audio/wav">
@@ -563,8 +566,8 @@
                   </td>
                 </tr>
                 <tr>
-                  <td style="vertical-align: middle;">GPT-4o mini</td>
-                  <td style="vertical-align: middle;">Quiet</td>
+                  <td style="vertical-align: middle; min-width: 100px;">GPT-4o mini</td>
+                  <td style="vertical-align: middle; min-width: 100px;">Quiet</td>
                   <td style="vertical-align: middle; min-width: 300px;">
                     <audio controls style="width: 100%;">
                       <source src="static/audios/gpt-4o-mini-quiet/topic8_par1_gpt_A_turn1.wav" type="audio/wav">
@@ -592,8 +595,8 @@
                   </td>
                 </tr>
                 <tr>
-                  <td style="vertical-align: middle;">Step-Audio 2 mini</td>
-                  <td style="vertical-align: middle;">Fast</td>
+                  <td style="vertical-align: middle; min-width: 100px;">Step-Audio 2 mini</td>
+                  <td style="vertical-align: middle; min-width: 100px;">Fast</td>
                   <td style="vertical-align: middle; min-width: 300px;">
                     <audio controls style="width: 100%;">
                       <source src="static/audios/step-audio2-mini-fast/topic3_par1_step-audio2-mini-vllm_turn1.wav" type="audio/wav">
@@ -621,8 +624,8 @@
                   </td>
                 </tr>
                 <tr>
-                  <td style="vertical-align: middle;">Step-Audio 2 mini</td>
-                  <td style="vertical-align: middle;">Sadness</td>
+                  <td style="vertical-align: middle; min-width: 100px;">Step-Audio 2 mini</td>
+                  <td style="vertical-align: middle; min-width: 100px;">Sadness</td>
                   <td style="vertical-align: middle; min-width: 300px;">
                     <audio controls style="width: 100%;">
                       <source src="static/audios/step-audio2-mini-sadness/topic11_par1_step-audio2-mini-vllm_turn1.wav" type="audio/wav">
@@ -650,8 +653,8 @@
                   </td>
                 </tr>
                 <tr>
-                  <td style="vertical-align: middle;">Step-Audio 2 mini</td>
-                  <td style="vertical-align: middle;">Slow</td>
+                  <td style="vertical-align: middle; min-width: 100px;">Step-Audio 2 mini</td>
+                  <td style="vertical-align: middle; min-width: 100px;">Slow</td>
                   <td style="vertical-align: middle; min-width: 300px;">
                     <audio controls style="width: 100%;">
                       <source src="static/audios/step-audio2-mini-slow/topic2_par1_step-audio2-mini-vllm_turn1.wav" type="audio/wav">
@@ -701,13 +704,14 @@
             priority than user messages to establish global behaviors and safety constraints. 
             However, our experiments show that placing style instructions in the system message is much less effective for SLMs than placing the same instructions in the user message.
         </p>
-
+        <br/>
+        <br/>
         <div class="content has-text-centered">
           <figure class="image">
             <img src="static/images/system-user_page.png" alt="Figure 5">
           </figure>
           <p class="is-size-7 has-text-grey mt-2">
-            First-turn IF rate difference when placing instructions in system messages vs user messages.
+            The difference of first-turn IF rate \(IF_1\) when placing instructions in system messages and user messages.
           </p>
         </div>
 
@@ -1092,7 +1096,7 @@
         <p class="has-text-grey">
         In our multi-turn setting, we observe that an SLM’s adherence to the specified speaking style often degrades over time, even when the style is clearly provided at the beginning of the conversation.
         This motivates a closer examination of what actually breaks during interaction.
-        <i>Research Question.</i> Do SLMs forget the initial instruction, or do they remember it but fail to consistently express the specified style?
+        This raise a research question: <i>Do SLMs forget the initial instruction, or do they remember it but fail to consistently express the specified style?</i> 
         To investigate this, we introduce a <i>recall process</i> for every turn after the first: before responding to the next user input, the SLM is explicitly prompted to restate the initial speaking style.
         This design helps disentangle instruction retention from style execution.
         </p>
