--- a/index.html
+++ b/index.html
@@ -330,11 +330,11 @@
             </p>
 
             <div>
-            $$ IF_j(s) = \frac{\sum_{i=1}^{N}\mathbbm{1}(o_{i,j}, s)}{N} \times 100\% $$
+            $$ IF_j(s) = \frac{\sum_{i=1}^{N}\mathbb{1}(o_{i,j}, s)}{N} \times 100\% $$
             </div>
 
             <p class="has-text-grey">
-            where $N$ is the total number of topics and $\mathbbm{1}(\cdot)$ is a binary style judge. We focus on two key metrics across $K$ turns:
+            where $N$ is the total number of topics and $\mathbb{1}(\cdot)$ is a binary style judge. We focus on two key metrics across $K$ turns:
             </p>
 
             <ul>
