--- a/index.html
+++ b/index.html
@@ -1128,7 +1128,7 @@
         <p class="has-text-grey">
         In our multi-turn setting, we observe that an SLM’s adherence to the specified speaking style often degrades over time, even when the style is clearly provided at the beginning of the conversation.
         This motivates a closer examination of what actually breaks during interaction.
-        This raise a research question: <i>Do SLMs forget the initial instruction, or do they remember it but fail to consistently express the specified style?</i> 
+        A research question is: <i>Do SLMs forget the initial instruction, or do they remember it but fail to consistently express the specified style?</i> 
         To investigate this, we introduce a <i>recall process</i> for every turn after the first: before responding to the next user input, the SLM is explicitly prompted to restate the initial speaking style.
         This design helps disentangle instruction retention from style execution.
         </p>
