--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
                   <div class="is-size-5 publication-authors">
                     <!-- TODO: Replace with your institution and conference/journal info -->
-                    <span class="author-block">National Taiwan University<br>Submitted to ACL ARR January 2026</span>
+                    <span class="author-block">National Taiwan University</span>
                   </div>
 
                   <div class="column has-text-centered">
@@ -273,7 +273,7 @@
           </p>
           <div class="has-text-centered mt-4">
             <figure class="image is-inline-block">
-              <img src="static/images/Framework.png" alt="Framework">
+              <img src="static/images/Framework-transparent.png" alt="Framework">
             </figure>
             <p class="has-text-grey">
               Our evaluation framework.
@@ -285,7 +285,7 @@
                 <div class="columns is-variable is-5 mt-4">
           <div class="column">
             <figure class="image">
-              <img src="static/images/IF_Rate_en_sadness_page.png" alt="Figure 1">
+              <img src="static/images/IF_Rate_en_sadness_page-transparent.png" alt="Figure 1">
             </figure>
             <p class="is-size-7 has-text-grey mt-2">
               IF rate across turns when instruct SLM to speak sadly.
@@ -294,7 +294,7 @@
 
           <div class="column">
             <figure class="image">
-              <img src="static/images/IF_Rate_en_anger_page.png" alt="Figure 4">
+              <img src="static/images/IF_Rate_en_anger_page-transparent.png" alt="Figure 4">
             </figure>
             <p class="is-size-7 has-text-grey mt-2">
               IF rate across turns when instruct SLM to speak angrily.
@@ -303,7 +303,7 @@
 
           <div class="column">
             <figure class="image">
-              <img src="static/images/IF_Rate_en_fast_page.png" alt="Figure 4">
+              <img src="static/images/IF_Rate_en_fast_page-transparent.png" alt="Figure 4">
             </figure>
             <p class="is-size-7 has-text-grey mt-2">
               IF rate across turns when instruct SLM to speak fast.
