--- a/index.html
+++ b/index.html
@@ -538,6 +538,35 @@
                   </td>
                 </tr>
                 <tr>
+                  <td style="vertical-align: middle; min-width: 100px;">GPT-4o</td>
+                  <td style="vertical-align: middle; min-width: 100px;">Sadness</td>
+                  <td style="vertical-align: middle; min-width: 300px;">
+                    <audio controls style="width: 100%;">
+                      <source src="static/audios/gpt-4o-sadness/topic39_par1_gpt_A_turn1.wav" type="audio/wav">
+                    </audio>
+                  </td>
+                  <td style="vertical-align: middle; min-width: 300px;">
+                    <audio controls style="width: 100%;">
+                      <source src="static/audios/gpt-4o-sadness/topic39_par1_gpt_A_turn2.wav" type="audio/wav">
+                    </audio>
+                  </td>
+                  <td style="vertical-align: middle; min-width: 300px;">
+                    <audio controls style="width: 100%;">
+                      <source src="static/audios/gpt-4o-sadness/topic39_par1_gpt_A_turn3.wav" type="audio/wav">
+                    </audio>
+                  </td>
+                  <td style="vertical-align: middle; min-width: 300px;">
+                    <audio controls style="width: 100%;">
+                      <source src="static/audios/gpt-4o-sadness/topic39_par1_gpt_A_turn4.wav" type="audio/wav">
+                    </audio>
+                  </td>
+                  <td style="vertical-align: middle; font-size: 1.5rem;">
+                    <span class="icon has-text-success">
+                      <i class="fas fa-check"></i>
+                    </span>
+                  </td>
+                </tr>                
+                <tr>
                   <td style="vertical-align: middle; min-width: 100px;">GPT-4o mini</td>
                   <td style="vertical-align: middle; min-width: 100px;">Anger</td>
                   <td style="vertical-align: middle; min-width: 300px;">
